--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,25 @@
     </style>
   </head>
   <body style="margin: 0">
+  <canvas id="canvas3D" width="400" height="300">Ваш браузер не поддерживает элемент canvas</canvas>
+
+  <script id="shader-fs" type="x-shader/x-fragment">
+varying highp vec4 vColor;
+  void main(void) {
+    gl_FragColor = vColor;
+  }
+</script>
+
+  <script id="shader-vs" type="x-shader/x-vertex">
+attribute vec3 aVertexPosition;
+attribute vec3 aVertexColor;
+varying highp vec4 vColor;
+uniform mat4 uMVMatrix;
+uniform mat4 uPMatrix;
+  void main(void) {
+     gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0);
+      vColor = vec4(aVertexColor, 1.0);
+  }
+</script>
   <script type="text/javascript" src="../dist/bundle.js"></script></body>
 </html>
